--- a/index.html
+++ b/index.html
@@ -130,11 +130,12 @@
         <div class="menu container">
           <div class="row">
             <div class="col-1">
-              <nav class="nav flex-column">
+              <nav class="nav flex-column navbar-menu">
                 <a class="nav-link" href="#">BreackFast</a>
                 <a class="nav-link" href="#">Lunch</a>
                 <a class="nav-link" href="#">Snacks</a>
                 <a class="nav-link" href="#">Dinner</a>
+                <a class="nav-link div-vide" href="#"></a>
               </nav>
             </div>
             <div class="col-4 container image-a">
